fix(autosuggest): only apply mobile full width on mobile
fix(autosuggest): only apply mobile full width on mobile

--- a/react/Autosuggest/Autosuggest.less
+++ b/react/Autosuggest/Autosuggest.less
@@ -48,19 +48,23 @@
 }
 
 .suggestionsContainer_fullWidth {
-  display: table;
-  width: 100vw;
-  left: 50vw;
-  box-shadow: 0 0;
-  border-radius: 0;
-  background: none;
-  padding: 0;
+  @media @mobile {
+    display: table;
+    width: 100vw;
+    left: 50vw;
+    box-shadow: 0 0;
+    border-radius: 0;
+    background: none;
+    padding: 0;
+  }
 }
 
 .suggestionsList_fullWidth {
-  position: relative;
-  left: -50vw;
-  background: @sk-white;
+  @media @mobile {
+    position: relative;
+    left: -50vw;
+    background: @sk-white;
+  }
 }
 
 .sectionTitle {
